added mongodb connection

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 PORT=3001
 
+DB_URL=koshthak_db_url
 DB_PORT=27017
 DB_NAME=node-template
 DB_USERNAME=koshthak
 DB_PASSWORD=koshthak 
+
+JWT_KEY=dev_jwt_key
