--- a/.gitignore
+++ b/.gitignore
@@ -71,11 +71,8 @@ web_modules/
 
 # dotenv environment variables file
 .env
-.env.test
-.env.local
-.env.prod
-.env.production
-.env.staging
+.env.*
+!.env.example
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
