added mongo docker-compose

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PORT=3001
+PORT=<port no>
 
 DB_URL=koshthak_db_url
 DB_PORT=27017
@@ -6,4 +6,4 @@ DB_NAME=node-template
 DB_USERNAME=koshthak
 DB_PASSWORD=koshthak 
 
-JWT_KEY=dev_jwt_key
+JWT_KEY=<jwt secret ket>
