--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 PORT=<port no>
 
-DB_URL=koshthak_db_url
-DB_PORT=27017
-DB_NAME=node-template
-DB_USERNAME=koshthak
-DB_PASSWORD=koshthak 
+DB_URL=<url>
+DB_PORT=<db port>
+DB_NAME=<db_name>
+DB_USERNAME=<db_username>
+DB_PASSWORD=<db_password> 
 
-JWT_KEY=<jwt secret ket>
+JWT_KEY==<jwt secret ket>
