--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
     "morgan": "^1.10.0",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^4.1.4",
     "validator": "^13.0.0",
     "winston": "^3.2.1"
   },
