multiple changes - added status codes - updated model, controller - updated error handling

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ DB_NAME=<db_name>
 DB_USERNAME=<db_username>
 DB_PASSWORD=<db_password> 
 
-JWT_KEY==<jwt secret ket>
+JWT_KEY_SECRET==<jwt secret ket>
