--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
+    "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
     "morgan": "^1.10.0",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4",
-    "validator": "^13.0.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
